fix(problem): fix problem page layout error on Firefox

--- a/src/pages/problem/index/ProblemPage.module.less
+++ b/src/pages/problem/index/ProblemPage.module.less
@@ -62,7 +62,7 @@
 }
 
 .rightContainer {
-  align-self: end;
+  align-self: start;
   padding-left: 1rem;
   position: sticky !important;
   top: -152px;
